# skypro_hw_14_1

./: .coverage  .gitignore  14.2_main.py  15.1_main.py  16.1_main.py  16.2_main.py  ReadMe.md  class_index.html  pyproject.toml
htmlcov/: function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_products_py.html
src/: category.py  products.py
test/: conftest.py  test_category.py  test_products.py
